--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+
+.span-email-content{
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  text-indent: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.span-content{
+  font-family: 'Times New Roman', Times, serif;
+  word-spacing: 2px;
+  text-indent: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heading-content{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+}
+
+.view-container{
+  background-color:violet;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.view-cart{
+
+background-color: pink;
+padding: 20px;
+
+
+
+}
+
+.create-user{
+  font-family: 'Times New Roman', Times, serif;
+  color: blue;
+  margin-top: 20px;
+}
+
+.para{
+  font-style: italic;
+}
+
+.heading-create{
+ background-color: lightskyblue;
+ padding: 20px;
+ margin-top: 10px;
+}
+
+.create-container{
+  background-color: aquamarine;
+}
+
+
+.edit-container{
+  background-color: papayawhip;
+
+}
+
+.heading-edit{
+  background-color: pink;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+#navbarNav{
+  font-size: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#navbarNav:hover{
+
+  font-size: 25px;
+  color:white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.text{
+  font-family: 'Times New Roman', Times, serif;
+  color: blue;
 }
+
+
+
+
